--- a/src/pages/Chat/chat.scss
+++ b/src/pages/Chat/chat.scss
@@ -87,12 +87,21 @@
                     margin: 5px 0;
                     border-radius: 5px;
                     display: flex;
+                    justify-content: space-between;
+                    align-items: center;
                     .profile{
                         border-radius: 5px;
                         width: 50px;
                         height: 50px;
                         background-color: rgb(0, 91, 94);
                         margin-right: 10px;
+                    }
+                    .user{
+                        flex: 1;
+                    }
+                    .user-remove-icon{
+                        height: 25px;
+                  cursor: pointer;
                     }
                 }
             }
@@ -108,16 +117,22 @@
             border-bottom: 1px black solid;
             display: flex;
             align-items: center;
+            justify-content: space-between;
             #profile{
                 width: 60px;
                 height: 60px;
                 border-radius: 50%;
                 margin: 10px;
                 background-color: brown;
+              
             }
             #userName{
                 font-size: large;
                 font-weight: 500;
+                flex: 1;
+            }
+            .clear-chat{
+                cursor: pointer;
             }
         }
         #body{
@@ -177,5 +192,6 @@
         }
     }
 }
+
 #bodyContent::-webkit-scrollbar { width: 0 !important }
 #body::-webkit-scrollbar { width: 0 !important }
